--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.2
-  flutter:
-    sdk: flutter
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
+  flutter:
+    sdk: flutter
   get: ^4.3.8
   google_sign_in: ^5.2.1
+  #flutter_facebook_login: ^2.0.0
 
 dev_dependencies:
   flutter_test:
