--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.11.0 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,9 +32,9 @@ dependencies:
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
-  get: ^4.3.8
-  google_sign_in: ^5.2.1
-  #flutter_facebook_login: ^2.0.0
+  get: ^3.22.1
+  google_sign_in: ^4.5.6
+  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
