--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,15 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cloud_firestore: ^3.1.0
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.2.0
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
+  flutter_facebook_login: ^3.0.0
   get: ^3.22.1
   google_sign_in: ^4.5.6
-  flutter_facebook_login: ^3.0.0
 
 dev_dependencies:
   flutter_test:
