--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_facebook_login: ^3.0.0
   get: ^3.22.1
   google_sign_in: ^4.5.6
+  shared_preferences: ^2.0.8
+
 
 dev_dependencies:
   flutter_test:
