--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,15 +33,13 @@ dependencies:
   firebase_core: ^1.10.0
   flutter:
     sdk: flutter
+  flutter_badged: ^2.0.2
   flutter_facebook_login: ^3.0.0
   get: ^3.22.1
   google_sign_in: ^4.5.6
   shared_preferences: ^2.0.8
-  flutter_badged: ^2.0.2
   sqflite: ^2.0.0+4
-
-
-
+  path: ^1.8.0
 
 dev_dependencies:
   flutter_test:
