--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   country_picker: ^2.0.9
   uuid: ^3.0.5
   smooth_page_indicator: ^1.0.0+2
-
+  flutter_credit_card: ^3.0.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +64,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/
     - assets/images/
     - assets/icons/
     - assets/svg/
