fix create account

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,8 +68,8 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
-    implementation 'com.android.support:multidex:1.0.3'
+ implementation 'com.facebook.android:facebook-login:latest.release'
+     implementation 'com.android.support:multidex:1.0.3'
 
 
 }
