--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,9 @@ dependencies:
   flutter_badged: ^2.0.2
   get: ^3.22.1
   google_sign_in: ^5.2.1
-  flutter_facebook_login: ^3.0.0
+  #flutter_facebook_login: ^3.0.0
+  flutter_login_facebook: ^1.4.1
+
   shared_preferences: ^2.0.8
   sqflite: ^2.0.0+4
   path: ^1.8.0
