--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   flutter_credit_card: ^3.0.1
   email_validator: ^2.0.1
 
+  # Lottie
+  lottie: ^1.3.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -71,6 +74,7 @@ flutter:
     - assets/images/
     - assets/icons/
     - assets/svg/
+    - assets/lotties/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
